Details
-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
6.0
-
None
-
Ubuntu 18.04.3
gcc (Ubuntu 7.5.0-3ubuntu1~18.04) 7.5.0
-
4897aa8b5fdba8ae4b56fdad1ff923f6a6faf882 (qt/qtbase/dev)
Description
Affects both qmake and CMake.
/usr/bin/c++ -DCore_EXPORTS -DELF_INTERPRETER=\"/lib64/ld-linux-x86-64.so.2\" -DPCRE2_CODE_UNIT_WIDTH=16 -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_CORE_LIB -DQT_CORE_QOBJECT_LIB -DQT_DEPRECATED_WARNINGS -DQT_MOC_COMPAT -DQT_NO_CAST_TO_ASCII -DQT_NO_FOREACH -DQT_NO_USING_NAMESPACE -DQT_USE_QSTRINGBUILDER -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -Ddeprecations -Iqtbase/src/corelib/Core_autogen/include -Iqtbase/include -Iqtbase/include/QtCore -I/media/dev2/qt-dev-cmake/qtbase/src/corelib -Iqtbase/src/corelib -Iqtbase/src/corelib/global -I/media/dev2/qt-dev-cmake/qtbase/src/corelib/../3rdparty/tinycbor/src -Iqtbase/include/QtCore/6.0.0 -Iqtbase/include/QtCore/6.0.0/QtCore -I/media/dev2/qt-dev-cmake/qtbase/src/corelib/../3rdparty/forkfd -Iqtbase/src/corelib/.rcc -I/media/dev2/qt-dev-cmake/qtbase/mkspecs/linux-g++ -I/media/dev2/qt-dev-cmake/qtbase/src/3rdparty/pcre2/src -isystem /usr/include/double-conversion -isystem /usr/include/glib-2.0 -isystem /usr/lib/x86_64-linux-gnu/glib-2.0/include -fsanitize=thread -g -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -Wno-error=implicit-fallthrough -fPIC -std=c++1z -Winvalid-pch -include /media/dev2/qt-dev-cmake-debug/qtbase/src/corelib/CMakeFiles/Core.dir/cmake_pch.hxx -MD -MT qtbase/src/corelib/CMakeFiles/Core.dir/thread/qmutex.cpp.o -MF qtbase/src/corelib/CMakeFiles/Core.dir/thread/qmutex.cpp.o.d -o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qmutex.cpp.o -c /media/dev2/qt-dev-cmake/qtbase/src/corelib/thread/qmutex.cpp In file included from /media/dev2/qt-dev-cmake/qtbase/src/corelib/thread/qmutex_linux.cpp:45:0, from /media/dev2/qt-dev-cmake/qtbase/src/corelib/thread/qmutex.cpp:793: /media/dev2/qt-dev-cmake/qtbase/src/corelib/thread/qfutex_p.h:85:14: fatal error: sanitizer/tsan_interface.h: No such file or directory # include <sanitizer/tsan_interface.h> ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
Attachments
Issue Links
- is required for
-
QTBUG-87316 Add -sanitize address/-sanitize thread support to CMake build
-
- Closed
-
For Gerrit Dashboard: QTBUG-87317 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
316920,4 | Fix build when configuring with -sanitize thread on gcc | dev | qt/qtbase | Status: MERGED | +2 | 0 |